# Kyoo.Transcoder

./: .gitignore  CMakeLists.txt  README.md  ffmpeg-config.txt
include/: compatibility.h  export.h  helper.h  path_helper.h  stream.h  transcoder.h
src/: compatibility.c  destroyer.c  extractor.c  helper.c  info.c  old_subtitles.c  path_helper.c  subtitles.c  transmuxer.c
tests/: .gitignore  Makefile  test_main.c
